# greengrass-agent-context-pack

./: AGENTS.md  CLAUDE.md  LICENSE-SAMPLECODE  LICENSE-SUMMARY  README.md  cleanup-resources.md
cleanup/: cleanup-local-resources.md
components/: README.md  component-basics.md  comprehensive-component-recipe.yaml  create-iot-core-publisher-component.md  greengrass-lite-component-patterns.md  token-exchange-service-guide.md
container-configs/: lite-config.yaml  troubleshooting.md
deployment/: deploy-components-to-greengrass-lite.md  deployment-patterns.md
examples/: README.md
examples/hello-world/: README.md  recipe.json
examples/iot-core-publisher/: README.md  recipe.json
examples/v1-lambda-migration/cpp/: CMakeLists.txt
examples/v1-lambda-migration/cpp/cloud_communication/: v2_controller.cpp
examples/v1-lambda-migration/cpp/local_communication/: v2_processor.cpp
hands-on-labs/: create-iot-core-publisher-component.md  deploy-components-to-greengrass-lite.md  greengrass-lite-component-patterns.md  setup-greengrass-java-container.md  setup-greengrass-lite-container.md
migration/: export_ggv1.sh  migrate-v1-lambda-to-v2-component.md  sdk-migration-reference.md
setup/: setup-greengrass-container.md  setup-greengrass-lite-container.md
skills/aws-iot-greengrass/examples/v1-lambda-migration/c/: CMakeLists.txt  README.md
skills/aws-iot-greengrass/examples/v1-lambda-migration/c/cloud_communication/: controller_recipe.json  v1_controller_lambda.c  v2_controller.c
troubleshooting/: common-issues.md  container-best-practices.md
(+62 files in other folders)
